Revert "Refactor dependency injection and remove Singleton patterns"
This reverts commit b709f239ab5793b0d0c5dd6d62ed2f4ad0b0c19a.