@@ -29,23 +29,15 @@ import java.util.stream.Collectors;
 @CommandPermission("mirage.command.world")
 public class WorldCommand extends BaseCommand {
 
-    private final WorldsDirectoryManager worldsDirectoryManager;
-    private final WorldsTracker worldsTracker;
-    private final ChunkRenderingSystem chunkRenderingSystem;
-
-    public WorldCommand(WorldsDirectoryManager worldsDirectoryManager, WorldsTracker worldsTracker, ChunkRenderingSystem chunkRenderingSystem) {
+    public WorldCommand() {
         registerWorldArguments();
-
-        this.worldsDirectoryManager = worldsDirectoryManager;
-        this.worldsTracker = worldsTracker;
-        this.chunkRenderingSystem = chunkRenderingSystem;
     }
 
     @Default
     @CommandCompletion("@nothing")
     @Description("Shows mirage worlds data")
     public void onCommand(Player player) {
-        player.sendMessage(Chat.format(String.format("Available worlds: %s", worldsDirectoryManager.getWorlds()), ChatColor.INFO));
+        player.sendMessage(Chat.format(String.format("Available worlds: %s", WorldsDirectoryManager.getInstance().getWorlds()), ChatColor.INFO));
     }
 
     @Subcommand("create")
@@ -53,7 +45,7 @@ public class WorldCommand extends BaseCommand {
     @Description("Creates the given world")
     @CommandPermission("mirage.command.world.create")
     public void create(Player player, @Single String worldName, @Single String persistent, @Optional String copyFromWorldName) {
-        if(worldsDirectoryManager.getWorlds().stream().anyMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().anyMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s already exists!", worldName), ChatColor.ERROR));
             return;
         }
@@ -71,7 +63,7 @@ public class WorldCommand extends BaseCommand {
             Component successMessage = Chat.format(String.format("Successfully copied: %s to %s world, use /world go %s to check it out!", copyFromWorldName, worldName, worldName), ChatColor.SUCCESS);
 
             MirageWorld copyFormWorld = WorldsDirectoryManager.getMirageWorld(copyFromWorldName);
-            worldsDirectoryManager.copyWorldAsync(copyFormWorld, worldName, isPersistent, (success, message) ->
+            WorldsDirectoryManager.getInstance().copyWorldAsync(copyFormWorld, worldName, isPersistent, (success, message) ->
                     handleWorldCreationCallback(player, success, message, successMessage)
             );
 
@@ -85,7 +77,7 @@ public class WorldCommand extends BaseCommand {
             MirageWorld world = WorldsDirectoryManager.getMirageWorld(worldName);
             world.setPersistent(isPersistent);
 
-            worldsDirectoryManager.saveWorldAsync(world, (success, message) ->
+            WorldsDirectoryManager.getInstance().saveWorldAsync(world, (success, message) ->
                     handleWorldCreationCallback(player, success, message, successMessage)
             );
         });
@@ -101,12 +93,12 @@ public class WorldCommand extends BaseCommand {
     @Description("Deletes the given world, will send the players in the world to the destination world, will show them a message when you choose the show them!")
     @CommandPermission("mirage.command.world.remove")
     public void remove(Player player, @Single String worldName, @Single String destinationWorldName, @Single String showMessage) {
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", worldName), ChatColor.ERROR));
             return;
         }
 
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(destinationWorldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(destinationWorldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", destinationWorldName), ChatColor.ERROR));
             return;
         }
@@ -138,7 +130,7 @@ public class WorldCommand extends BaseCommand {
             Bukkit.unloadWorld(world, false);
         }
 
-        worldsDirectoryManager.removeWorldAsync(WorldsDirectoryManager.getMirageWorld(worldName), (success, message) -> {
+        WorldsDirectoryManager.getInstance().removeWorldAsync(WorldsDirectoryManager.getMirageWorld(worldName), (success, message) -> {
             if (success) {
                 player.sendMessage(Chat.format(String.format("World: %s has been removed successfully!", worldName), ChatColor.SUCCESS));
                 registerWorldArguments();
@@ -153,7 +145,7 @@ public class WorldCommand extends BaseCommand {
     @Description("Teleport to the given world")
     @CommandPermission("mirage.command.world.teleport")
     public void go(Player player, @Single String worldName) {
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", worldName), ChatColor.ERROR));
             return;
         }
@@ -161,7 +153,7 @@ public class WorldCommand extends BaseCommand {
         World world = Bukkit.getWorld(worldName);
 
         if(world == null) {
-            worldsDirectoryManager.loadWorldAsync(WorldsDirectoryManager.getMirageWorld(worldName), (success, message) ->
+            WorldsDirectoryManager.getInstance().loadWorldAsync(WorldsDirectoryManager.getMirageWorld(worldName), (success, message) ->
                     new BukkitRunnable() {
                         @Override
                         public void run() {
@@ -189,7 +181,7 @@ public class WorldCommand extends BaseCommand {
     @Description("Saves the world")
     @CommandPermission("mirage.command.world.save")
     public void save(Player player, @Single String worldName) {
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", worldName), ChatColor.ERROR));
             return;
         }
@@ -203,7 +195,7 @@ public class WorldCommand extends BaseCommand {
     @Description("Resets the world to it's saved stage")
     @CommandPermission("mirage.command.world.reset")
     public void reset(Player player, @Single String worldName) {
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", worldName), ChatColor.ERROR));
             return;
         }
@@ -219,7 +211,7 @@ public class WorldCommand extends BaseCommand {
             player.sendMessage(Chat.format("Resetting world...", ChatColor.SUCCESS));
 
             if(world.getUseRollback()) {
-                worldsTracker.getTrackedWorld(worldName).reset();
+                WorldsTracker.getInstance().getTrackedWorld(worldName).reset();
             } else {
                 if(!resetWorld(player, world)) {
                     player.sendMessage(Chat.format(String.format("was not able to reset %s", worldName), ChatColor.ERROR));
@@ -260,8 +252,8 @@ public class WorldCommand extends BaseCommand {
             return;
         }
 
-        chunkRenderingSystem.renderWorldAs(receiver, world, visualizer);
-        chunkRenderingSystem.updateChunks(receiver);
+        ChunkRenderingSystem.getInstance().renderWorldAs(receiver, world, visualizer);
+        ChunkRenderingSystem.getInstance().updateChunks(receiver);
     }
 
     @Subcommand("settings")
@@ -269,7 +261,7 @@ public class WorldCommand extends BaseCommand {
     @Description("Opens the world settings GUI")
     @CommandPermission("mirage.command.world.settings")
     public void settings(Player player, @Single String worldName) {
-        if(worldsDirectoryManager.getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
+        if(WorldsDirectoryManager.getInstance().getWorlds().stream().noneMatch(mirageWorld -> mirageWorld.getWorldName().equals(worldName))) {
             player.sendMessage(Chat.format(String.format("World: %s doesn't exist!", worldName), ChatColor.ERROR));
             return;
         }
@@ -300,7 +292,7 @@ public class WorldCommand extends BaseCommand {
 
         TagResolver useRollbackTag = Placeholder.styling("userollback", getColor(world.getUseRollback()), ClickEvent.callback(audience -> {
             world.setUseRollback(!world.getUseRollback());
-            worldsTracker.checkForMirageWorldsUpdate();
+            WorldsTracker.getInstance().checkForMirageWorldsUpdate();
 
             refreshSettingsScreen(player, world);
         }));
@@ -336,7 +328,7 @@ public class WorldCommand extends BaseCommand {
     private boolean resetWorld(Player initializer, MirageWorld mirageWorld) {
         World bukkitWorld = Bukkit.getWorld(mirageWorld.getWorldName());
 
-        if(Bukkit.getWorlds().getFirst().equals(bukkitWorld)) {
+        if(Bukkit.getWorlds().get(0).equals(bukkitWorld)) {
             initializer.sendMessage(Chat.format("It's not possible to reset the main world without rollback enabled!", ChatColor.ERROR));
             return false;
         }
@@ -349,7 +341,7 @@ public class WorldCommand extends BaseCommand {
         }
 
         Bukkit.unloadWorld(bukkitWorld, false);
-        worldsDirectoryManager.loadWorldAsync(mirageWorld, (success, message) -> {
+        WorldsDirectoryManager.getInstance().loadWorldAsync(mirageWorld, (success, message) -> {
             if(!success)
                 initializer.sendMessage(Chat.format(message, ChatColor.ERROR));
 
@@ -388,13 +380,13 @@ public class WorldCommand extends BaseCommand {
         //There is no way to check if the world has finished saving...
         new BukkitRunnable() {
             public void run() {
-                worldsDirectoryManager.saveWorldAsync(world, (success, message) -> {
+                WorldsDirectoryManager.getInstance().saveWorldAsync(world, (success, message) -> {
                     if (!success) {
                         player.sendMessage(Chat.format(message, ChatColor.ERROR));
                         return;
                     }
 
-                    worldsTracker.getTrackedWorld(world.getWorldName()).updateSave();
+                    WorldsTracker.getInstance().getTrackedWorld(world.getWorldName()).updateSave();
                     player.sendMessage(Chat.format(String.format("%s was saved!", world.getWorldName()), ChatColor.SUCCESS));
                 });
 
@@ -414,7 +406,7 @@ public class WorldCommand extends BaseCommand {
      */
     private void registerWorldArguments() {
         Mirage.getInstance().getCommandManager().getCommandCompletions().registerCompletion("world", c ->
-                worldsDirectoryManager.getWorlds().stream().map(MirageWorld::getWorldName).collect(Collectors.toList())
+                WorldsDirectoryManager.getInstance().getWorlds().stream().map(MirageWorld::getWorldName).collect(Collectors.toList())
         );
     }
 }
